# todo-app-web

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
backend/: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  verify_production.py
backend/src/: config.py  database.py  main.py
backend/src/routes/: tasks.py
frontend/app/dashboard/: page.tsx
frontend/app/signin/: page.tsx
frontend/hooks/: useAuth.tsx  useTags.ts  useTasks.ts
frontend/lib/: api.ts  auth.ts
history/adr/: 004-port-binding.md  005-neon-pooling.md  006-cors-security.md  007-secret-externalization.md
specs/001-console-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-backend-deployment/: audit-report.md  plan.md  quickstart.md  spec.md  tasks.md
src/: __init__.py  main.py
src/cli/: __init__.py  menu.py
src/commands/: __init__.py  add.py  base.py  complete.py  delete.py  update.py  view.py
src/models/: __init__.py  task.py
src/storage/: __init__.py  memory.py
tests/: __init__.py
tests/integration/: test_add_integration.py  test_complete_integration.py  test_delete_integration.py  test_menu_integration.py  test_performance.py  test_update_integration.py  test_view_integration.py
tests/unit/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_edge_cases.py  test_menu.py  test_storage.py  test_task_model.py  test_update_command.py  test_view_command.py
tests/verify/: test_auth.py  test_cors.py  test_health_check.py  test_user_isolation.py
(+24 files in other folders)
